# gnome_logitech_status

./: .gitignore  meson.build  meson_options.txt
data/dbus-interfaces/: org.gnome.SettingsDaemon.Logitech.xml
js/ui/status/: logitech.js
liblogitech/: Cargo.toml
liblogitech/src/: lib.rs  protocol.rs
plugins/: meson.build
plugins/logitech/: gsd-logitech-manager.h  main.c  meson.build  org.gnome.settings-daemon.plugins.logitech.policy.in.in
